<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remembeer</string>

    <string-array name="beer_styles_list">
        <item>Adjunct Lager</item>
        <item>Altbier</item>
        <item>Amber</item>
        <item>Ancient Herbed Ale</item>
        <item>Baltic Porter</item>
        <item>Barleywine</item>
        <item>Belgian White</item>
        <item>Berliner Weissbier</item>
        <item>Bière Brut</item>
        <item>Bière de Champagne</item>
        <item>Bière de Garde</item>
        <item>Black and Tan</item>
        <item>Blonde Ale</item>
        <item>Bock</item>
        <item>Braggot</item>
        <item>Brown Ale</item>
        <item>California Common</item>
        <item>Chile Beer</item>
        <item>Cream Ale</item>
        <item>Czech Pilsener</item>
        <item>Dark Ale</item>
        <item>Dark Mild Ale</item>
        <item>Dark Wheat Ale</item>
        <item>Doppelbock</item>
        <item>Dortmunder</item>
        <item>Double IPA</item>
        <item>Double</item>
        <item>Dubbel</item>
        <item>Dunkelweizen</item>
        <item>Eisbock</item>
        <item>English Bitter</item>
        <item>English Brown Ale</item>
        <item>ESB</item>
        <item>European Dark Lager</item>
        <item>European Pale Lager</item>
        <item>European Strong Lager</item>
        <item>Export Lager</item>
        <item>Extra Special Bitter</item>
        <item>Extra Strong Bitter</item>
        <item>Farmhouse Ale</item>
        <item>Faro</item>
        <item>Flanders Oud Bruin</item>
        <item>Flanders Red Ale</item>
        <item>Fruit Beer</item>
        <item>German Pilsener</item>
        <item>Gose</item>
        <item>Gueuze</item>
        <item>Happoshu</item>
        <item>Hefeweizen</item>
        <item>Helles Bock</item>
        <item>Herbed Beer</item>
        <item>Imperial Pilsner</item>
        <item>Imperial Stout</item>
        <item>Imperial IPA</item>
        <item>IPA</item>
        <item>Irish Dry Stout</item>
        <item>Irish Red Ale</item>
        <item>Japanese Rice Lager</item>
        <item>Keller Bier</item>
        <item>Kölsch</item>
        <item>Kristalweizen</item>
        <item>Kvass</item>
        <item>Lambic</item>
        <item>Light Lager</item>
        <item>Maibock</item>
        <item>Malt Liquor</item>
        <item>Märzen</item>
        <item>Mild Ale</item>
        <item>Milk Stout</item>
        <item>Munich Dunkel Lager</item>
        <item>Munich Helles Lager</item>
        <item>Oatmeal Stout</item>
        <item>Oktoberfest</item>
        <item>Old Ale</item>
        <item>Pale Ale</item>
        <item>Pale Lager</item>
        <item>Pale Mild Ale</item>
        <item>Pale Wheat Ale</item>
        <item>Porter</item>
        <item>Pumpkin Ale</item>
        <item>Quadrupel (Quad)</item>
        <item>Rauchbier</item>
        <item>Red Ale</item>
        <item>Red Lager</item>
        <item>Roggenbier</item>
        <item>Russian Imperial Stout</item>
        <item>Rye Beer</item>
        <item>Sahti</item>
        <item>Saison</item>
        <item>Schwarzbier</item>
        <item>Scotch Ale</item>
        <item>Scottish Ale</item>
        <item>Scottish Gruit</item>
        <item>Smoked Beer</item>
        <item>Spiced Beer</item>
        <item>Steam Beer</item>
        <item>Stout</item>
        <item>Strong Ale</item>
        <item>Strong Dark Ale</item>
        <item>Strong Pale Ale</item>
        <item>Summer Pilsner</item>
        <item>Sweet Stout</item>
        <item>Tripel</item>
        <item>Vegetable Beer</item>
        <item>Vienna Lager</item>
        <item>Weizenbock</item>
        <item>Wheatwine</item>
        <item>Wild Ale</item>
        <item>Winter Warmer</item>
        <item>Witbier</item>
        <item>Zwickel Bier</item>
    </string-array>

    <string name="beername">Beer name:</string>
    <string name="container">Container:</string>
	<string name="container_prompt">Choose the container</string>
	<string name="drink_when">Drink when:</string>
	<string name="drink_when_prompt">Choose a time</string>
	<string name="addbeer_notesLabel">Notes:</string>

	<string name="save">Save beer!</string>
	<string name="done">Done</string>
	<string name="cancel">Cancel</string>
	
	<string name="addbeerdone_title">Beer added</string>
	<string name="morestats">See more stats</string>
	<string name="addanother">Drink another!</string>
	
	<string name="your_rating">Your rating:</string>
	<string name="addbeer_fromhistory">Add a beer</string>
	<string name="charts_fromstats">View charts</string>
	
	<string name="loadingBeerInfo">Looking up beer info..</string>
	<string name="noneBeerInfo">Enter a beer name</string>
	<string name="unknownBeerInfo">Unknown</string>
	<string name="beerInfoBrewery"><b>Brewery</b>: </string>
	<string name="beerInfoStyle"><b>Style</b>: </string>
	<string name="editBeerInfo"><u>Edit beer info..</u></string>
	<string name="beerinfo_abvLabel">ABV</string>
	<string name="beerinfo_breweryLabel">Brewery</string>
	<string name="beerinfo_locationLabel">Location</string>
	<string name="beerinfo_styleLabel">Style</string>
	<string name="beerinfo_notesLabel">About this beer</string>
	<string name="beerinfo_title">Edit info for</string>
	<string name="beerinfo_saveInfo">Save info</string>
	<string name="beerinfo_saveRating">Save rating</string>

	<string name="viewstat_placeholder">This is where the stat name goes</string>
	
	<string name="pref_addBeerDoneActivity">Beer add next screen</string>
	<string name="pref_addBeerDoneActivity_default">History</string>	
	<string name="pref_remindersEnabled">Show rating reminders</string>
	<string name="pref_remindersVibrate">Vibrate</string>
	<string name="pref_remindersDelay">Rating reminders delay</string>
	<string name="pref_remindersDelay_summary">In minutes</string>
	<string name="pref_twitterEnabled">Post to Twitter</string>
	<string name="pref_twitterEnabled_summary">Automatically post Drink Now beers to Twitter</string>
	<string name="pref_twitterTemplate">Twitter template</string>
	<string name="pref_twitterTemplate_default">I just drank a BEERNAME #beer</string>
	
	<string name="twitter_signin">Setup your Twitter account</string>
	<string name="twitter_setup_username">Username</string>
	<string name="twitter_setup_password">Password</string>
	<string name="twitter_teardown_title">Really clear your stored Twitter\nusername and password?</string>
	<string name="twitter_login">Login</string>
	<string name="twitter_progress_title">Authorizing</string>
	<string name="twitter_progress_message">Authorizing Twitter account</string>
	<string name="twitter_whoops">Whoops, unable to login with that password.</string>
	
	<string name="reminder_tickerText">How\'s that beer you\'re drinking?</string>
	<string name="reminder_title">How\'s that beer?</string>
	<string name="reminder_text">Take a moment and rate your beer.</string>

	<string name="stat_drinksCount">Number of beers drunk</string>
	<string name="stat_beersCount">Number of different beers drunk</string>
	<string name="stat_favoriteBeer">Favorite beer</string>
	<string name="stat_mostDrunkBeer">Most drunk beer</string>
	<string name="stat_favoriteDrinkingHour">Favorite drinking hour</string>
	<string name="stat_drinksLast7days">Drinks in the last 7 days</string>
	<string name="stat_drinksThisMonth">Drinks so far this month</string>
	<string name="stat_drinksThisYear">Drinks so far this year</string>
	
	<string name="addbeerdone_prefix_small">That was your</string>
	<string name="addbeerdone_num_eq1">first</string>
	<string name="addbeerdone_num_eq2">second</string>
	<string name="addbeerdone_suffix_thisMonth_small">beer so far this month</string>
	<string name="addbeerdone_suffix_last7days_small">beer in the last 7 days</string>
	<string name="addbeerdone_suffix_beerTypes_small">different type of beer</string>
	<string name="addbeerdone_suffix_thisYear_small">beer so far this year</string>

	<string name="addbeerdone_prefix_large">You have drunk</string>
	<string name="addbeerdone_suffix_thisMonth_large">beers so far this month</string>
	<string name="addbeerdone_suffix_last7days_large">beers in the last 7 days</string>
	<string name="addbeerdone_suffix_beerTypes_large">different types of beer</string>
	<string name="addbeerdone_suffix_thisYear_large">beers so far this year</string>
	
	<string name="optionsmenu_addbeer">Add Beer</string>
	<string name="optionsmenu_history">History</string>
	<string name="optionsmenu_history_sort_alpha">Sort by beer name</string>
	<string name="optionsmenu_history_sort_date">Sort by date</string>
	<string name="optionsmenu_export">Import/Export</string>
	<string name="optionsmenu_statistics">Statistics</string>
	<string name="optionsmenu_settings">Settings</string>
	
	<string name="import_title">Import / Export</string>
	<string name="export_title">Last Export: </string>
	<string name="export_date">Never</string>
	<string name="export_email">Export to Email</string>
	<string name="export_local">Export Locally</string>
	<string name="import_local">Import Beers\nfrom local file</string>
	<string name="export_whoops">Whoops, unable to export your beers</string>
	<string name="export_success">Successfully exported database to \n</string>
	<string name="import_throbber">Loading Beers from local file</string>
	<string name="import_title_before">Imported </string>
	<string name="import_title_after"> Beers</string>
	
	<string name="history_drink_another">Drink another </string>
	<string name="history_editbeer">Edit beer info</string>
	<string name="history_delete">Delete</string>
	<string name="history_delete_title">Delete this beer?</string>
	<string name="history_delete_warn">This action cannot be undone.</string>
	<string name="history_clear_search">Show all History</string>
	
	<string name="search_label">Search your Beers</string>

	<string name="pref_useWebService">Use the Remembeer library</string>
	<string name="pref_useWebService_summary">Contribute to and get information from the beer library</string>
	<string name="webService_warning_title">Remembeer Library</string>
	<string name="webService_warning_text">By using the Remembeer library, you will get information about beers you drink from our centralized database, and will also send information you collect to share with our other users.</string>
	<string name="webService_warning_yes">Yes!</string>
	<string name="webService_warning_no">No, thanks</string>
	
	<string name="webService_upload_prefix">Upload your existing beers(</string>
	<string name="webService_upload_suffix">) into the database now?</string>
	<string name="webService_publish_prefix">This should take </string>
	<string name="webService_publish_1m">no time at all.</string>
	<string name="webService_publish_3m">a moment or so, order a beer.</string>
	<string name="webService_publish_5m">a couple minutes, order a few beers.</string>
	
	<string name="webService_publish_dialog_title">Publishing</string>
	<string name="webService_publish_dialog_message">Publishing all beers to library</string>	
</resources>
