<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="6dip"
		android:paddingRight="6dip">

		<com.wanghaus.remembeer.widget.BeerSearchView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/beersearch" />
			
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/container"
			android:paddingTop="10dip" />

		<Spinner
			android:id="@+id/container"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/container_prompt" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/drink_when" />

		<Spinner
			android:id="@+id/drinkwhen"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/drink_when_prompt" />

		<TextView
			android:id="@+id/addbeer_notesLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/addbeer_notesLabel" />
		<EditText
			android:id="@+id/addbeer_notes"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="top"
			android:imeOptions="actionDone"
			android:capitalize="sentences" />

		<Button
			android:id="@+id/save"
			android:layout_width="150dip"
			android:layout_height="wrap_content"
			android:text="@string/save"
			android:layout_gravity="center"
			android:textSize="20dip"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip" />
	</LinearLayout>

</ScrollView>