<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/configure_twitter"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
   	<TextView
		android:id="@+id/webService_warning_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:paddingBottom="16dip"
		android:text="@string/webService_warning_text"
		android:textSize="16sp"></TextView>

	<Button
		android:id="@+id/webService_warning_yes"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/webService_warning_text"
		android:layout_alignParentLeft="true"
		android:text="@string/webService_warning_yes"
		android:textSize="24sp"></Button>
	<Button
		android:id="@+id/webService_warning_no"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/webService_warning_text"
		android:layout_alignParentRight="true"
		android:text="@string/webService_warning_no"
		android:textSize="16sp"></Button>
</RelativeLayout>
