<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"

	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:id="@+id/beerinfo"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<FrameLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
			android:background="#333">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/metadata"
				android:visibility="gone"
				android:orientation="vertical"
				android:paddingTop="4dp">
				<TextView
					android:id="@+id/drank_when"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip" />

				<TextView
					android:text="@string/your_rating"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip" />
				<RatingBar
					android:id="@+id/rating"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:numStars="5"
					android:stepSize="1" />

				<TextView
					android:id="@+id/addbeer_notesLabel"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/addbeer_notesLabel"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip" />
				<EditText
					android:id="@+id/addbeer_notes"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="6dip"
					android:layout_marginRight="6dip"
					android:minLines="2"
					android:gravity="top" />
					
				<Button
					android:id="@+id/beerinfo_saveRating"
					android:layout_width="150sp"
					android:layout_height="wrap_content"
					android:text="@string/beerinfo_saveRating"
					android:layout_gravity="center"
					android:layout_marginTop="10dip"
					android:layout_marginBottom="5dip" />

			</LinearLayout>

		</FrameLayout>

		<TextView
			android:id="@+id/beerinfo_breweryLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_breweryLabel"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />
		<EditText
			android:id="@+id/beerinfo_brewery"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:capitalize="words"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />

		<TextView
			android:id="@+id/beerinfo_locationLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_locationLabel"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />
		<AutoCompleteTextView
			android:id="@+id/beerinfo_location"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:autoText="true"
			android:capitalize="words"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />

		<TextView
			android:id="@+id/beerinfo_styleLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_styleLabel"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />
		<EditText
			android:id="@+id/beerinfo_style"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:capitalize="words"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />

		<TextView
			android:id="@+id/beerinfo_abvLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_abvLabel"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip">
			<EditText
				android:id="@+id/beerinfo_abv"
				android:layout_width="70sp"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:numeric="decimal" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:text="%"
				android:textSize="20sp"
				android:gravity="center_vertical"
				android:layout_marginLeft="6dip" />
		</LinearLayout>

		<TextView
			android:id="@+id/beerinfo_notesLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_notesLabel"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip" />
		<EditText
			android:id="@+id/beerinfo_notes"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip"
			android:minLines="2"
			android:gravity="top" />

		<Button
			android:id="@+id/beerinfo_saveInfo"
			android:layout_width="150sp"
			android:layout_height="wrap_content"
			android:text="@string/beerinfo_saveInfo"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:layout_gravity="center" />
	</LinearLayout>
</ScrollView>